fix: enrich metadata to experiment and plate DTOs + typo